namespace Faraway.Pixel.Entities.Interaction
{
    /// <summary>
    /// Represents the base data class for an interactive object.
    /// </summary>
    public abstract class InteractiveObjectData
    {
    }
}