@startuml
'https://plantuml.com/class-diagram

abstract class "InteractiveObjectData" as interactiveObjectData {
}

class "BuffInteractiveObjectData" as buffInteractiveObjectData {
}
interactiveObjectData <|-- buffInteractiveObjectData : Inheritance

class "CollectableObjectData" as collectableObjectData {
}
interactiveObjectData <|-- collectableObjectData : Inheritance

abstract class "InteractiveObject" as interactiveObject {
    +void Interact()
}
interactiveObject ..> interactiveObjectData : Uses

class "BuffInteractiveObject" as buffInteractiveObject {
}
interactiveObject <|-- buffInteractiveObject : Inheritance
buffInteractiveObject ..> buffInteractiveObjectData : Uses

class "CollectableInteractiveObject" as collectableInteractiveObject {
}
interactiveObject <|-- collectableInteractiveObject : Inheritance
collectableInteractiveObject ..> collectableObjectData : Uses

class "InteractiveObjectFactory" as interactiveObjectFactory {
    +InteractiveObject CreateInteractiveObject(InteractiveObjectData data)
}

interactiveObjectFactory --> interactiveObject : Creates

@enduml